# heuristic_optimization

RedesNeuronales/: .gitignore  LICENSE  Makefile  README.md  RESUMEN_EJECUTIVO.md  RESUMEN_PASO_A_PASO.txt  SPEC.md  conftest.py  pyproject.toml  requirements.txt  run_all.py
RedesNeuronales/configs/: numerical_experiments.yaml  tsp_experiments.yaml
RedesNeuronales/data/processed/: france_96_capitals.csv  tsp_distance_matrix.csv  tsp_time_matrix.csv  tsp_toll_matrix.csv  tsp_total_cost_matrix_base.csv
RedesNeuronales/data/raw/: france_departments_sources.csv
RedesNeuronales/data/results/: numerical_results.csv  numerical_summary.csv  tsp_best_routes.csv  tsp_results.csv  tsp_summary.csv
RedesNeuronales/docs/: contexto_material_clase.md  decisiones_tecnicas.md
RedesNeuronales/notebooks/: 01_exploration.ipynb  02_numerical_results.ipynb  03_tsp_results.ipynb
RedesNeuronales/reports/: blog_post.md  contribution_video_template.md  prompts_ia.md  reporte_tecnico.docx  technical_report.md  test_results.md
RedesNeuronales/scripts/: gen_stage.py  gen_tsp.py
RedesNeuronales/src/: __init__.py
RedesNeuronales/src/optimization/: __init__.py  differential_evolution.py  evolutionary.py  experiment_runner.py  functions.py  gradient_descent.py  gradients.py  metrics.py  pso.py
RedesNeuronales/src/tsp/: __init__.py  ant_colony.py  cost_model.py  data_loader.py  genetic_algorithm.py  route_plotter.py  tsp_runner.py
RedesNeuronales/src/utils/: __init__.py  config.py  io.py  logging.py  seed.py
RedesNeuronales/tests/: test_algorithms.py  test_functions.py  test_tsp.py
(+5 files in other folders)
