[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optimizacion-irna-2026"
version = "0.1.0"
description = "Comparación de descenso por gradiente, heurísticos bioinspirados y métodos combinatorios (IRNA 2026-01)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "PyYAML>=6.0",
    "imageio>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
maps = ["geopandas>=0.13", "contextily>=1.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
packages = ["src"]
